docs/original_moodle/entregas/todas/2/Tarea 8 - Calculadora de Horas/SIMARRA-1151896 NEIDER JOAN 2581/2019-09-22-22-20-25.ceg/compilation.txt
Hora.java:138: error: cannot find symbol
      this.other=HH24;
          ^
  symbol: variable other
1 error
Not compiled
